# parallel-tree-search

./: CMakeLists.txt  README.md  parallel_search.cu  serial_search.c  treesearch
lib/: tree.hpp  tree_helper.cpp
src/: parallel_search.cu  serial_search.cpp
